Remove pinning feature
It has been officially supported since JDK-8254693.